Extract Ui class to handle user interaction